--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -16,33 +16,33 @@
     <h3>Description</h3>
     <p>This Lasagna Recipe is easy to make with a creamy ricotta cheese mixture, savory meat sauce, and mozzarella
         cheese. BONUS: it’s make-ahead and freezer-friendly!</p>
-    <h3>Ingredients</h2>
+    <h3>Ingredients</h3>
         <ul>
 
-            <p>Cheese Sauce</p>
-            <li>▢15 oz. ricotta cheese, 2 cups
-            <li>▢1 large egg</li>
-            <li>▢2 cups mozzarella cheese</li>
-            <li>▢¾ cup Parmesan cheese, freshly grated</li>
-            <li>▢2 teaspoons Italian seasoning</li>
-            <li>▢½ teaspoon salt</li>
-            <li>▢¼ tsp pepper</li>
+            <h4>Cheese Sauce</h4>
+            <li>15 oz. ricotta cheese, 2 cups
+            <li>1 large egg</li>
+            <li>2 cups mozzarella cheese</li>
+            <li>¾ cup Parmesan cheese, freshly grated</li>
+            <li>2 teaspoons Italian seasoning</li>
+            <li>½ teaspoon salt</li>
+            <li>¼ tsp pepper</li>
 
-            <p>Meat Sauce</p>
-            <li>▢1 tablespoon olive oil</li>
-            <li>▢1 yellow onion, finely diced</li>
-            <li>▢¾ lb. ground beef</li>
-            <li>▢¾ lb. ground Italian sausage</li>
-            <li>▢3 cloves garlic, minced</li>
-            <li>▢½ cup chicken broth</li>
-            <li>▢40 oz. marinara sauce, see notes</li>
-            <li>▢1 tablespoon tomato paste</li>
-            <li>▢1 teaspoon hot sauce</li>
-            <li>▢1 teaspoon Worcestershire sauce</li>
+            <h4>Meat Sauce</h4>
+            <li>1 tablespoon olive oil</li>
+            <li>1 yellow onion, finely diced</li>
+            <li>¾ lb. ground beef</li>
+            <li>¾ lb. ground Italian sausage</li>
+            <li>3 cloves garlic, minced</li>
+            <li>½ cup chicken broth</li>
+            <li>40 oz. marinara sauce, see notes</li>
+            <li>1 tablespoon tomato paste</li>
+            <li>1 teaspoon hot sauce</li>
+            <li>1 teaspoon Worcestershire sauce</li>
 
-            <p>Lasagna Noodles/ Cheese Topping</p>
-            <li>▢12 lasagna noodles, plus extra in case of breakage</li>
-            <li>▢2.5 cups mozzarella cheese</li>
+            <h4>Lasagna Noodles/ Cheese Topping</h4>
+            <li>12 lasagna noodles, plus extra in case of breakage</li>
+            <li>2.5 cups mozzarella cheese</li>
         </ul>
         <h3>Steps</h3>
         
