Add brownies content
Added brownies steps, description, ingredients, and image in the
format of previous recipe HTML

--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -11,10 +11,10 @@
     <h1>Chocolate Chip Cookies</h1>
     <a href="../index.html">Home</a>
     <br />
-    <img src="../images/cookies.jpeg" width="500" height="500"
-        alt="a gooey fresh chocolate chip cookie" />
+    <img src="../images/cookies.jpeg" width="500" height="500" alt="a gooey fresh chocolate chip cookie" />
     <h3>Description</h3>
-    <p>Learn how to make the chocolate chip cookie that started it all! Our original NESTLÉ® TOLL HOUSE® chocolate chip cookie recipe is perfect for all occasions!</p>
+    <p>Learn how to make the chocolate chip cookie that started it all! Our original NESTLÉ® TOLL HOUSE® chocolate chip
+        cookie recipe is perfect for all occasions!</p>
     <h3>Ingredients</h2>
         <ul>
 
@@ -30,7 +30,7 @@
             <li>1 cup chopped nuts (Optional. If omitting, add 1 to 2 Tbsp. of all-purpose flour.)</li>
         </ul>
         <h3>Steps</h3>
-        
+
         <ol>
             <li>Preheat oven to 375° F.</li>
             <li>Combine flour, baking soda and salt in small bowl. </li>
