Add styles to home page

--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css"/>
     <title>Home</title>
 </head>
 <body>
-    <h1>Odin's Recipes</h1>
-    <ul>
-        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="./recipes/cookies.html">Cookies</a></li>
-        <li><a href="./recipes/brownies.html">Brownies</a></li>
+    <h1 class="title">Odin's Recipes</h1>
+    <ul class="links">
+        <li id ="lasagna"><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li id="cookies"><a href="./recipes/cookies.html">Cookies</a></li>
+        <li id="brownies"><a href="./recipes/brownies.html">Brownies</a></li>
     </ul>
 </body>
 </html>
